# tetra3

./: .gitignore  setup.cfg  setup.py
examples/: test_tetra3.py
