[metadata]
name = tetra3
version = 1.0.0
description = Tetra 3 fork
url = https://github.com/sunipkm/tetra3
keywords =
  astronomy
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Astronomy
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  python-dateutil
  requests
  numpy
  scipy
  Pillow
package_dir=
  =./

[options.packages.find]
  where=./

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
